examples/bookinfo/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: productpage
  namespace: default
  labels:
    app: productpage
    version: v1
spec:
  containers:
    - name: productpage
      ports:
        - name: http
          containerPort: 9080
status:
  podIPs:
    - ip: 10.244.1.11
---
apiVersion: v1
kind: Pod
metadata:
  name: details
  namespace: default
  labels:
    app: details
    version: v1
spec:
  containers:
    - name: details
      ports:
        - name: http
          containerPort: 9080
status:
  podIPs:
    - ip: 10.244.2.7
